--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -5,7 +5,7 @@
 }
 
 .btn:hover {
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
   border-color: var(--color-primary-light);
-  color: var(--color-secondary);
+  color: var(--color-primary);
 }
