Add new colour to repo

--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@
   --color-primary: #701647;
   --color-primary-light: #9e5681;
   --color-secondary: #efc820;
+  --color-light-yellow: #ffea92;
   --color-neutral-dark-grey: #4c4c49;
   --color-neutral-grey: #82827d;
 
