--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -9,3 +9,18 @@
   border-color: var(--color-primary-light);
   color: var(--color-primary);
 }
+
+.btn-ghost {
+  background-color: transparent;
+  color: var(--color-primary);
+}
+
+.btn-ghost:hover {
+  color: var(--color-primary-light);
+}
+
+.btn-light {
+  background-color: var(--color-primary-light);
+  border-color: var(--color-primary);
+  color: var(--color-secondary);
+}
