--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -9,7 +9,6 @@
 }
 
 .btn-ghost {
-  background-color: var(--color-light-yellow);
   border-color: var(--color-primary);
   color: var(--color-neutral-dark-grey);
 }
@@ -17,15 +16,16 @@
 .btn-ghost:hover {
   background-color: var(--color-secondary);
   border-color: var(--color-light-yellow);
+  border-color: var(--color-primary);
 }
 
 .btn-light {
   background-color: var(--color-light-yellow);
-  border-color: var(--color-primary-light);
   color: var(--color-neutral-dark-grey);
 }
 
 .btn-light:hover {
   background-color: var(--color-secondary);
   border-color: var(--color-light-yellow);
+  border-color: var(--color-primary);
 }
