Add button styling page

--- a/css/theme.css
+++ b/css/theme.css
@@ -14,7 +14,7 @@
 html {
   font-family: var(--font-primary);
   color: var(--color-accent);
-  background-color: var(--color-secondary)
+  background-color: var(--color-rustybrown)
 }
 
 h1 {
