--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -20,7 +20,7 @@
 }
 
 .btn-light {
-  background-color: var(--color-light-yellow);
+  background-color: var(--color-primary-light);
   color: var(--color-neutral-dark-grey);
 }
 
