--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -11,7 +11,22 @@
   border-color: var(--color-rustybrown);
 }
 
+.btn:active {
+  background-color: var(--colour-primary);
+  border-color: var(--color-rustybrown);
+}
+
 .btn-ghost {
   background-color: transparent;
-  color: var(--color-accent);
+  color: var(--color-black);
+}
+
+.btn-ghost:hover {
+  background-color: var(--color-primary-light);
+}
+
+.btn-light {
+  background-color: var(--color-secondary);
+  border-color: var(--color-rustybrown);
+  border-color: var(--colour-primary);
 }
