--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -50,3 +50,13 @@ border-radius: 100px;
 background-color: rgba(255, 255, 255, 0.27);
 border-radius: 100px;
 }
+
+.hamburger {
+  background-color: transparent;
+  border-width: 0;
+}
+
+.hamburger:hover {
+background-color: rgba(255, 255, 255, 0.27);
+border-radius: 100px;
+}
