--- a/css/theme.css
+++ b/css/theme.css
@@ -2,7 +2,8 @@
   --color-primary: #632918;
   --color-primary-light: #956957;
   --color-secondary: #407487;
-  --color-accent: #f7f0cb;
+  --color-accent: #ac6a28;
+  --color-neutral: #f7f0cb;
 
   --font-primary: 'Quicksand', sans-serif;
 }
