new folders added to the file

--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
   --color-extra: #683d66;
   --color-dark: #171133;
   --color-overlay: #3b0d38;
-  --background-color: #fff;
+  --background-color: white;
   --font-primary: 'Source Sans Pro', sans-serif;
   --font-secondary: 'Source Serif Pro', serif;
 }
