--- a/css/theme.css
+++ b/css/theme.css
@@ -1,19 +1,14 @@
 :root {
-  --color-primary: #610d3b;
-  --color-secondary: #50254c;
+  --color-primary: #af2024;
+  --color-secondary: #231f20;
   --color-accent: #912065;
-  --color-neutral: #79667e;
-  --color-extra: #683d66;
-  --color-dark: #171133;
-  --color-overlay: #3b0d38;
-  --background-color: #fff;
+  --color-neutral: #f8f8f8;
   --font-primary: 'Source Sans Pro', sans-serif;
   --font-secondary: 'Source Serif Pro', serif;
 }
 
 html {
   font-family: var(--font-primary);
-  background-color: #fff;
 }
 
 h1 {
