--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,7 +1,7 @@
 .btn {
   background-color: var(--color-accent);
   border-color: none;
-  color: var(--color-overlay);
+  color: #fff;
 }
 
 .btn:hover {
