--- a/css/theme.css
+++ b/css/theme.css
@@ -1,8 +1,7 @@
 :root {
   --color-primary: #af2024;
   --color-secondary: #231f20;
-  --color-accent: #912065;
-  --color-neutral: #f8f8f8;
+  --color-accent: #f8f8f8;
   --font-primary: 'Source Sans Pro', sans-serif;
   --font-secondary: 'Source Serif Pro', serif;
 }
