new color added

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,11 +1,11 @@
 .btn {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   border-color: none;
   color: #fff;
 }
 
 .btn:hover {
-  background-color: var(--color-primary);
+  background-color: var(--color-extra);
   border-color: var(--color-accent);
 }
 
