--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@
   --color-primary: #af2024;
   --color-secondary: #231f20;
   --color-accent: #f8f8f8;
+  --color-extra: #c76366;
   --font-primary: 'Source Sans Pro', sans-serif;
   --font-secondary: 'Source Serif Pro', serif;
 }
