--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -19,7 +19,12 @@
 }
 
 .btn-light {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   border-color: var(--color-primary);
-  color: white;
+  color: #fff;
+}
+
+.btn-light:hover {
+  background-color: var(--color-extra)
+  color: #fff;
 }
