--- a/_patterns/product-page/genre-page.css
+++ b/_patterns/product-page/genre-page.css
@@ -30,7 +30,6 @@ html, body {
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0;
   transition: all 0.3s ease;
 }
 
@@ -44,7 +43,7 @@ html, body {
 }
 .product-description span {
   font-size: 12px;
-  color: var(-color-secondary);
+  color: var(--color-secondary);
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
@@ -85,21 +84,6 @@ html, body {
   border-radius: 50%;
 }
 
-.color-choose input[type=&quot;radio&quot;] + label span {
-  border: 2px solid #FFFFFF;
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
-}
-
-.color-choose input[type=&quot;radio&quot;]#red + label span {
-  background-color: #C91524;
-}
-.color-choose input[type=&quot;radio&quot;]#blue + label span {
-  background-color: #314780;
-}
-.color-choose input[type=&quot;radio&quot;]#black + label span {
-  background-color: #323232;
-}
-
 .color-choose input[type=&quot;radio&quot;]:checked + label span {
   background-image: url(images/check-icn.svg);
   background-repeat: no-repeat;
@@ -120,39 +104,6 @@ html, body {
   background-color: #fff;
   cursor: pointer;
   transition: all .5s;
-}
-
-.cable-choose button:hover,
-.cable-choose button:active,
-.cable-choose button:focus {
-  border: 2px solid #86939E;
-  outline: none;
-}
-
-.cable-config {
-  border-bottom: 1px solid #E1E8EE;
-  margin-bottom: 20px;
-}
-
-.cable-config a {
-  color: #358ED7;
-  text-decoration: none;
-  font-size: 12px;
-  position: relative;
-  margin: 10px 0;
-  display: inline-block;
-}
-.cable-config a:before {
-  content: &quot;?&quot;;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  border: 2px solid rgba(53, 142, 215, 0.5);
-  display: inline-block;
-  text-align: center;
-  line-height: 16px;
-  opacity: 0.5;
-  margin-right: 5px;
 }
 
 /* Product Price */
