Add different styles to buttons

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -11,6 +11,7 @@
 .btn-ghost {
   border-color: var(--color-primary);
   color: var(--color-neutral-dark-grey);
+  background-color: transparent;
 }
 
 .btn-ghost:hover {
