--- a/_patterns/cards/home-banner.css
+++ b/_patterns/cards/home-banner.css
@@ -1,27 +1,36 @@
 h1 {
-  color:  #efc820;
+  color: #701647;
   padding: .5em;
   text-align: left;
   margin: 0;
-  border-bottom: 3px, #efc820;
+  overflow: hidden;
 }
 
-nav ul {
-  list-style-type: none;
-  padding-left: .75rem;
+.masthead {
+  background: url("/images/one-dot-50.jpg");
+  background-color: transparent;
+  background-size: 25px;
+  border-bottom: solid 3px #701647;
 }
 
-li {
-  display: block;
+.logo {
+  text-align: center;
+  color: #fff;
 }
 
-nav a {
-  list-style-type: none;
+.nav {
+  text-align: center;
+}
+
+.nav a {
   text-decoration: none;
-  color:  #efc820;
-  padding: .3em 0 .5em;
-  white-space: nowrap;
-  width: 25%;
-  float: right;
-  display:inline-block;
+  background-color: #9e5681;
+  border: solid 3px ;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.nav a:hover {
+  background-color: #fff;
+  color: #9e5681;
 }
