--- a/css/theme.css
+++ b/css/theme.css
@@ -21,3 +21,18 @@ h1 {
   font-weight: 400;
   font-style: normal;
 }
+
+h2, h3, h4, h5, h6 {
+  font-family: var(--font-secondary);
+  color: var(--color-primary);
+  font-weight: 500;
+  font-style: normal;
+}
+
+a {
+  color: var(--color-whatever);
+}
+
+mark {
+  background-color: var(--color-accent)
+}
