Add cards to the pattern library

--- a/css/theme.css
+++ b/css/theme.css
@@ -5,7 +5,7 @@
 
   --color-secondary: #fff;
   --color-secondary-dark: #f3f3f3;
-  --color-secondary-darker: #e2e2e2;
+  --color-secondary-darker: #bfbfbf;
 
 
   --color-yellow: #fed676;
