--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -1,5 +1,6 @@
 .product {
   border: 1px solid var(--color-secondary-darker);
+  border-radius: 4px;
   transition: all .2s linear;
 }
 
@@ -7,7 +8,7 @@
   color: var(--color-secondary-darker);
 }
 
-.cat-card .card-img,
+.promo-card .card-img,
 .product .card-img {
   transform: scale(1);
   transition: all .2s linear;
@@ -24,7 +25,7 @@
   transition: all .2s linear;
 }
 
-.cat-card:hover .card-img,
+.promo-card:hover .card-img,
 .product:hover .card-img {
   transform: scale(1.1);
   transition: all .2s linear;
@@ -39,8 +40,9 @@
   color: var(--color-light-red);
 }
 
-.cat-title {
+.promo-title {
   color: var(--color-secondary);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
+  font-family: var(--font-secondary)
 }
