Add new primary colour

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary: #292929;
-  --color-primary-light: #898989;
-  --color-secondary: #fff;
+  --color-primary-light: #fff;
+  --color-secondary: #898989;
   --color-blue: #007AFF;
   --color-light-gray: #e2e2e2;
   --color-hot-pink: hotpink;
