--- a/css/theme.css
+++ b/css/theme.css
@@ -65,7 +65,7 @@ dl {
 a {
   font-family: var(--font-primary);
   font-style: italic;
-  font-color: var(--color-secondary);
+  color: var(--color-secondary);
   font-weight: 400;
 }
 
@@ -81,4 +81,11 @@ cite {
   font-style: italic;
   font-color: var(--color-secondary);
   font-weight: 400;
+}
+
+mark {
+  font-family: var(--font-primary);
+  font-style: italic;
+  color: var(--color-primary);
+  background-color: var(--color-light-gray);
 }
