--- a/css/theme.css
+++ b/css/theme.css
@@ -5,6 +5,7 @@
   --color-light-yellow: #ffea92;
   --color-neutral-dark-grey: #4c4c49;
   --color-neutral-grey: #82827d;
+  --color-light-grey: #e3e3e3;
 
   --font-primary: "Aleo", serif;
   --font-secondary: "Lato", sans-serif;
@@ -137,4 +138,8 @@ u {
   font-weight: 700;
   font-family: var(--font-secondary: "Lato", sans-serif);
   color: var(--#9e5681);
+}
+
+.violet-text {
+  color: var(--color-primary);
 }
