--- a/_patterns/forms/forms.css
+++ b/_patterns/forms/forms.css
@@ -1,5 +1,5 @@
- .search-field:not([type="checkbox"]),
- .search-field:not([type="radio"]) {
+.search-field:not([type="checkbox"]),
+.search-field:not([type="radio"]) {
   border-radius: 2em;
   border-color: var(--color-secondary-dark);
   padding: 1rem;
@@ -8,4 +8,15 @@
 
 .search-field:focus {
   border-radius: 2em;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .search-main {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 30em;
+    width: 100%;
+  }
+
 }
