--- a/_patterns/header/header.css
+++ b/_patterns/header/header.css
@@ -1,55 +1,41 @@
-.masthead {
-  border-bottom: .2em solid var(--color-primary);
-  border-top: .2em solid var(--color-secondary);
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
   text-align: center;
-  background-color: #fff;
-}
-
-header {
-  padding: 1em 0 40px;
-  text-align: center;
-  position: relative;
-}
-
-.nav {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  background-color: var(--color-accent);
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 100%;
-  width: 15em;
-}
-
-.nav a {
-  display: block;
-  padding: 0.5em;
+  padding: 12px;
   text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: var(--color-extra);
   color: #fff;
 }
 
-.nav a:hover {
-  background-color: var(--color-neutral);
-  color: var(--color-primary);
+.header-right {
+  float: right;
 }
 
-.nav-check:checked ~ .nav {
-  display: block;
-}
-
-.nav-check {
-  position: absolute;
-  top: -3em;
-}
-
-.nav-label {
-  cursor: pointer:nesw-resize;
-  font-size: .25rem;
-  width: 40px;
-  display: inline-block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
 }
