--- a/css/theme.css
+++ b/css/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --color-primary: #915d75;
+  --color-primary: #693f52;
   --color-primary-light: #ede6f3;
-  --color-secondary: #cd828c;
-  --color-accent: #adbe9a;
+  --color-secondary: #ab5964;
+  --color-accent: #84a175;
   --color-neutral-beige: #e7ccc2;
   --color-whatever: #d7602e;
 
