Update type scale

--- a/css/theme.css
+++ b/css/theme.css
@@ -17,127 +17,126 @@ html {
 
 h1 {
   font-weight: 700;
-  font-family: var(--font-secondary: "Aleo", serif);
-  color: var(--color-primary: #701647);
+  font-family: var(--font-secondary);
+  color: var(--color-primary);
 }
 
 h2 {
   font-weight: 400;
-  font-family: var(--font-secondary: "Aleo", serif);
-  color: var(--color-neutral-dark-grey: #9e5681);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 h3 {
   font-weight: 400;
-  font-family:  var(--font-secondary: "Aleo", serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family:  var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 
 h4 {
   font-weight: 400;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 
 h5 {
   font-weight: 400;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
-}
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 h6
 ul {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 
 }
 ol {
   font-weight: 400;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 dl {
   font-weight: 400;
-  font-family:  var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family:  var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 a {
   font-weight: 700;
-  font-family: var(--font-secondary: "Aleo", serif);
-  color: var(--color-primary: #701647);
+  font-family: var(--font-secondary);
+  color: var(--color-primary);
 }
 blockquote {
   font-weight: 400;
-  font-family: var(--font-secondary: "Aleo", serif);
+  font-family: var(--font-secondary);
   color: var(--color-primary: #701647);
 }
 cite {
   font-weight: 300;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 em {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 strong {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 del {
   font-weight: 300, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--#82827d);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 
 ins {
   font-weight: 300, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--#4c4c49);
+  font-family: var(--font-secondary);
+  color: var(----color-primary);)
 }
 
 abbr {
   font-weight: 400, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 dfn {
   font-weight: 300, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 i {
   font-weight: 300, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 b {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-dark-grey: #4c4c49);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-dark-grey);
 }
 mark {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--#9e5681);
+  font-family: var(--font-secondary);
+  color: var(--color-primary-light);
 }
 q {
   font-weight: 400;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--#9e5681);
+  font-family: var(--font-secondary);
+  color: var(--color-primary-light);
 }
 s {
   font-weight: 300, italic;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--color-neutral-grey: #82827d);
+  font-family: var(--font-secondary);
+  color: var(--color-neutral-grey);
 
 }
 u {
   font-weight: 700;
-  font-family: var(--font-secondary: "Lato", sans-serif);
-  color: var(--#9e5681);
+  font-family: var(--font-secondary);
+  color: var(--color-primary-light);
 }
 
 .violet-text {
