Add all the buttons descriptions

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -29,3 +29,8 @@
   color: var(--color-secondary);
   text-decoration: underline, italic;
 }
+
+.btn-noborder {
+  color: var(--color-secondary);
+  border-color: none;
+}
