Add all the things

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -26,8 +26,9 @@
 }
 
 .btn-more {
-  color: var(--color-secondary);
+  color: var(--color-primary-light);
   text-decoration: underline, italic;
+  background-color: var(--color-secondary);
 }
 
 .btn-noborder {
